<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fake_components</name>
  <version>0.0.0</version>
  <description>The package implements generic components for simple faking of hardware. The components simply bounces the input commands back.</description>
  <author email="jafar@picknik.ai">Jafar Abdi</author>
  <author email="denis@stogl.de">Denis Stogl</author>

  <maintainer email="denis@stogl.de">Denis Stogl</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
