<?xml version="1.0"?>
<package format="2">
  <name>hardware_interface</name>
  <version>4.27.0</version>
  <description>ros2_control hardware interface</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>control_msgs</depend>
  <depend>joint_limits</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pal_statistics</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>sdformat_urdf</depend>
  <depend>tinyxml2_vendor</depend>
  <depend>urdf</depend>

  <build_depend>rcutils</build_depend>
  <exec_depend>rcutils</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
