<package format="3">
  <name>joint_limits</name>
  <version>0.0.0</version>
  <description>Package for with interfaces for handling of joint limits for use in controllers or in hardware. It also implements a simple, default joint limit strategy by clamping the values.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/ros-controls/ros2_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros2_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros2_control</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rcutils</depend>

  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
