<package format="3">
  <name>joint_limits</name>
  <version>4.18.0</version>
  <description>Package with interfaces for handling of joint limits in controllers or in hardware. The package also implements Saturation Joint Limiter for position-velocity-acceleration set and other individual interfaces.</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis.stogl@stoglrobotics.de">Denis Štogl</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://github.com/ros-controls/ros2_control/wiki</url>
  <url type="bugtracker">https://github.com/ros-controls/ros2_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros2_control</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>generate_parameter_library</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
